--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -117,13 +117,31 @@ p {
   margin-top: 1.5rem;
 }
 
+
+.navbar {
+  position:absolute;
+  right:0;
+  top:0rem;
+  padding-right: 0;
+}
+
+.nav-item {
+  font-size:1.05rem;
+  margin:0 0.25rem;
+}
+
+.nav-link {
+  color:rgba(255,255,255,.7) !important;
+}
+
+.nav-link:hover {
+  background:rgba(0,0,0,.4) !important;
+  border-radius: 2px;
+}
+
 .header {
-  bottom: 2rem;
-  animation-name: slideUp;
-  animation-iteration-count: 1;
-  animation-timing-function: ease-in;
-  animation-duration: 1.5s;
-  padding-bottom: 2.5rem;
+  position: relative;
+  padding:4rem 0 1rem 0;
 }
 
 .header-background {
@@ -143,6 +161,7 @@ p {
 .hello {
   color: rgba(255, 255, 255, 0.7);
   font-size: 1.5rem;
+  margin-top: 1rem;
 }
 
 .name-author {
@@ -261,7 +280,7 @@ p {
 
 .cl-git,
 .cl-git:hover {
-  color: #dadada;
+  color: #fefefe;
 }
 
 .cl-linkedin,
@@ -406,6 +425,10 @@ p {
 @media only screen and (max-width: 768px) {
   /* mobile display */
   
+  .nav-item {
+    font-size: 0.95rem;
+  }
+
   .heading {
     font-size:1.3rem;
   }
@@ -433,9 +456,12 @@ p {
   }
 
   .img-profile {
-    max-width: 80% !important;
+    display:none;
   }
 
+  .hello {
+    margin-top: 0;
+  }
   
   .work-card:before {
     top: 2.4em;
