header improved margins

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -155,7 +155,7 @@ p {
 .img-profile {
     border: 0.5rem rgba(0, 0, 0, 0.2) solid;
     border-radius: 50%;
-    box-sizing: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
+    box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
 }
 
 .hello {
@@ -172,11 +172,13 @@ p {
 
 .statement {
   font-size: 3.5rem;
+  line-height: 4rem;
 }
 
 .title {
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   font-weight: 500;
+  margin-top:1rem;
 }
 
 .quick-about {
@@ -400,10 +402,16 @@ p {
 
   .title {
     font-size: 1.5rem;
+    margin-top: 0;
   }
 
   .quick-about {
     font-size: 1.15rem;
+  }
+
+  .hello {
+    line-height: 1.5rem;
+    font-weight: 500;
   }
 }
 
@@ -444,7 +452,8 @@ p {
   .statement {
     font-size: 2rem;
     line-height:2rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
+    line-height: 2.5rem;
   }
 
   .title {
