--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -4,16 +4,43 @@ html {
   scroll-behavior: smooth;
 }
 
-:root {
+.darkmode {
   --backgroundBody: rgb(17, 17, 17);
   --textColor: rgb(240,240,240);
   --white: #fff;
+  --black: #000;
   --accent: #d53a9d;
   --accentDark: #be1881;
   --accentLight: #d76db0;
   --textMuted: #8a9196;
   --textSecondary: rgb(190, 190, 190);
   --cardBG: rgb(34, 34, 34);
+  --white-opaque: rgba(255,255,255,0.5);
+  --white-opaque2x: rgba(255,255,255,0.25);
+  --white-opaque4x: rgba(255,255,255,0.125);
+  --black-opaque: rgba(0,0,0,0.5);
+  --black-opaque2x: rgba(0,0,0,0.25);
+  --black-opaque4x: rgba(0,0,0,0.125);
+  --fontHeading: 'Roboto Mono', 'Consolas';
+}
+
+:root {
+  --backgroundBody: rgb(255,255,255);
+  --textColor: rgb(14,14,14);
+  --white: #000;
+  --black: #fff;
+  --white-opaque: rgba(0,0,0,0.5);
+  --white-opaque2x: rgba(0,0,0,0.25);
+  --white-opaque4x: rgba(0,0,0,0.125);
+  --black-opaque: rgba(255,255,255,0.5);
+  --black-opaque2x: rgba(255,255,255,0.25);
+  --black-opaque4x: rgba(255,255,255,0.125);
+  --accent: #d53a9d;
+  --accentDark: #be1881;
+  --accentLight: #d76db0;
+  --textMuted: #727a7f;
+  --textSecondary: rgb(56,56,56);
+  --cardBG: rgb(240, 240, 240);
   --fontHeading: 'Roboto Mono', 'Consolas';
 }
 
@@ -177,7 +204,7 @@ p {
   font-weight: bold;
   border-radius:50rem;
   border:none;
-  background: rgba(255,255,255,0.1);
+  background: var(--white-opaque2x);
 }
 
 .btn-outline-light i {
@@ -186,7 +213,7 @@ p {
 
 .btn-outline-light:hover {
   background: linear-gradient(to right,#d53a9d, #743ad5);
-  color: var(--white);
+  color: var(--black);
 }
 
 .btn-outline-light:focus {
@@ -233,6 +260,67 @@ p {
 ******* HEADER
 */
 
+.th-toggle {
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  place-content: end;
+}
+
+.darkmode-toggle {
+  background-color: var(--white-opaque4x);
+  display: inline-block;
+  border-radius: 50px;
+  width: 2.8em;
+  height: 1.8em;
+  font-size: 0.8rem;
+  line-height: 1.8rem;
+  position: relative;
+  -webkit-box-shadow: 0 0 0.5rem 0.1rem rgba(var(--rgb-light-accent-darkened), 0.2);
+          box-shadow: 0 0 0.5rem 0.1rem rgba(var(--rgb-light-accent-darkened), 0.2);
+  border: 0.1rem solid rgba(var(--rgb-grey), 0.3);
+  cursor: pointer;
+}
+
+.darkmode-toggle button {
+  width: 1.55em;
+  height: 1.55em;
+  border: none;
+  background-color: var(--clr-accent);
+  color: var(--clr-white);
+  border-radius: 50px;
+  padding: 0;
+  position: absolute;
+  margin: 0 0.1em;
+  top: 0.1em;
+  left: 0;
+  -webkit-transition: background-color 0.2s ease;
+  transition: background-color 0.2s ease;
+}
+
+.darkmode-toggle button .fa-moon {
+  display: none;
+}
+.darkmode-toggle button .fa-sun {
+  display: block;
+}
+
+.darkmode-toggle .enabled {
+  left: .825rem;
+  background-color: var(--accentLight);
+}
+
+.darkmode-toggle .enabled .fa-moon {
+  display: block;
+}
+.darkmode-toggle .enabled .fa-sun {
+  display: none;
+}
+
+.darkmode-toggle:hover button {
+  background-color: var(--accentLight);
+}
+
 .header {
   border-top:0.2rem solid;
   border-image-slice: 1;
@@ -240,7 +328,7 @@ p {
 }
 
 .navbar-background {
-  border-bottom: 1px solid rgb(255,255,255, 0.1);
+  border-bottom: 1px solid var(--white-opaque4x);
   margin-bottom: 2em;
   padding:0.25rem 0;
 }
@@ -255,12 +343,12 @@ p {
 }
 
 .nav-link {
-  color:rgba(255,255,255,.8) !important;
+  color:var(--textSecondary) !important;
   padding: .25em .85em !important;
 }
 
 .nav-link:hover {
-  background:rgba(255,255,255,.2) !important;
+  background:var(--white-opaque4x) !important;
   border-radius: 2px;
   color:var(--white) !important;
 }
@@ -303,7 +391,7 @@ p {
 .header-description {
   font-size: 1.1rem;
   margin-top: 0.5rem;
-  color: rgba(255,255,255,0.6);
+  color: var(--textSecondary);
   line-height: 1.8rem;
 }
 
@@ -314,13 +402,13 @@ p {
 }
 
 .cl:hover {
-  background: rgb(255, 255, 255,0.2);
+  background: var(--white-opaque2x);
   border-radius: .2em;
 }
 
 .cl-git,
 .cl-git:hover {
-  color: #fefefe;
+  color: var(--white);
 }
 
 .cl-linkedin,
@@ -589,6 +677,10 @@ p {
   
   .nav-item {
     font-size: 0.95rem;
+  }
+
+  .nav-link {
+    padding: .25em .4em !important;
   }
 
   .heading {
