--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700;900&display=swap");
+
 /*
 ! tailwindcss v3.3.1 | MIT License | https://tailwindcss.com
 */
@@ -421,7 +423,7 @@ video {
   display: none;
 }
 
-*, ::before, ::after {
+*, ::before, ::after{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -468,7 +470,7 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-::-webkit-backdrop {
+::-webkit-backdrop{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -515,7 +517,7 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-::backdrop {
+::backdrop{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -562,185 +564,195 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.container {
+.container{
   width: 100%;
 }
 
-@media (min-width: 640px) {
-  .container {
+@media (min-width: 640px){
+  .container{
     max-width: 640px;
   }
 }
 
-@media (min-width: 768px) {
-  .container {
+@media (min-width: 768px){
+  .container{
     max-width: 768px;
   }
 }
 
-@media (min-width: 1024px) {
-  .container {
+@media (min-width: 1024px){
+  .container{
     max-width: 1024px;
   }
 }
 
-@media (min-width: 1280px) {
-  .container {
+@media (min-width: 1280px){
+  .container{
     max-width: 1280px;
   }
 }
 
-@media (min-width: 1536px) {
-  .container {
+@media (min-width: 1536px){
+  .container{
     max-width: 1536px;
   }
 }
 
-@media (min-width: 1836px) {
-  .container {
+@media (min-width: 1836px){
+  .container{
     max-width: 1836px;
   }
 }
 
-@media (min-width: 2222px) {
-  .container {
+@media (min-width: 2222px){
+  .container{
     max-width: 2222px;
   }
 }
 
-.float-right {
-  float: right;
-}
-
-.mx-auto {
+.mx-auto{
   margin-left: auto;
   margin-right: auto;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
+.my-0{
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
+.my-0\.5{
+  margin-top: 0.125rem;
+  margin-bottom: 0.125rem;
 }
 
-.ml-3 {
-  margin-left: 0.75rem;
+.my-12{
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
-.mr-auto {
-  margin-right: auto;
+.my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
+.my-2\.5{
+  margin-top: 0.625rem;
+  margin-bottom: 0.625rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
-.block {
-  display: block;
+.my-8{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
-.flex {
+.mr-2{
+  margin-right: 0.5rem;
+}
+
+.mr-8{
+  margin-right: 2rem;
+}
+
+.flex{
   display: flex;
 }
 
-.grid {
+.grid{
   display: grid;
 }
 
-.hidden {
+.hidden{
   display: none;
 }
 
-.h-full {
-  height: 100%;
+.h-screen{
+  height: 100vh;
 }
 
-.flex-1 {
+.w-2\/5{
+  width: 40%;
+}
+
+.w-3\/5{
+  width: 60%;
+}
+
+.flex-1{
   flex: 1 1 0%;
 }
 
-.flex-none {
+.flex-none{
   flex: none;
 }
 
-.items-center {
+.items-center{
   align-items: center;
 }
 
-.justify-center {
+.justify-center{
   justify-content: center;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
-.bg-gray-950 {
+.bg-gray-950{
   --tw-bg-opacity: 1;
   background-color: rgb(17 17 17 / var(--tw-bg-opacity));
 }
 
-.p-1 {
-  padding: 0.25rem;
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.p-2 {
-  padding: 0.5rem;
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
-.py-24 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-}
-
-.pb-2 {
+.pb-2{
   padding-bottom: 0.5rem;
 }
 
-.pt-3 {
+.pt-3{
   padding-top: 0.75rem;
 }
 
-.pt-4 {
-  padding-top: 1rem;
+.align-middle{
+  vertical-align: middle;
 }
 
-.pt-5 {
-  padding-top: 1.25rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-gray-300 {
+.text-gray-300{
   --tw-text-opacity: 1;
   color: rgb(164 164 164 / var(--tw-text-opacity));
+}
+
+.text-gray-700{
+  --tw-text-opacity: 1;
+  color: rgb(67 67 67 / var(--tw-text-opacity));
+}
+
+.invert{
+  --tw-invert: invert(100%);
+  -webkit-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+          filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 html {
   scroll-behavior: smooth;
 }
 
-body {
+body{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(17 17 17 / var(--tw-text-opacity));
 }
 
-:is(.dark body) {
+:is(.dark body){
   --tw-bg-opacity: 1;
   background-color: rgb(17 17 17 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
@@ -753,40 +765,142 @@ body {
   font-size: 16px;
 }
 
+body *{
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 200ms;
+}
+
+*{
+  --tw-text-opacity: 1;
+  color: rgb(56 56 56 / var(--tw-text-opacity));
+}
+
+:is(.dark *){
+  --tw-text-opacity: 1;
+  color: rgb(227 227 227 / var(--tw-text-opacity));
+}
+
 .font-mono {
   font-family: "Roboto Mono", "Consolas", "Courier New", monospace;
 }
 
-a {
+a{
   --tw-text-opacity: 1;
   color: rgb(213 58 157 / var(--tw-text-opacity));
   text-decoration-line: none;
 }
 
-a:hover {
+a:hover{
   --tw-text-opacity: 1;
   color: rgb(182 32 123 / var(--tw-text-opacity));
   text-decoration-line: underline;
 }
 
+.container{
+  width: 66.666667%;
+}
+
+.select-none {
+  -webkit-user-select: none;
+  /* Safari */
+  /* Firefox */
+  /* IE10+/Edge */
+  user-select: none;
+  /* Standard */
+}
+
+/* Headings */
+
+h1{
+  font-size: 3rem;
+  line-height: 1;
+  font-weight: 700;
+  line-height: 4rem;
+}
+
+h2{
+  font-size: 2.25rem;
+  font-weight: 700;
+  line-height: 3.5rem;
+  letter-spacing: -0.025em;
+}
+
+h3{
+  font-size: 1.875rem;
+  font-weight: 700;
+  line-height: 2.5rem;
+  letter-spacing: -0.025em;
+}
+
 /* Buttons */
 
-.btn-outline-light {
-  color: var(--textSecondary);
-  margin-bottom: 4px;
-  font-weight: bold;
-  border-radius: 50rem;
-  border: none;
-  background: var(--white-opaque2x);
+.btn-outline-light{
+  --tw-bg-opacity: 1;
+  background-color: rgb(200 200 200 / var(--tw-bg-opacity));
 }
 
-.btn-outline-light i {
-  font-weight: 400;
+:is(.dark .btn-outline-light){
+  --tw-bg-opacity: 1;
+  background-color: rgb(49 49 49 / var(--tw-bg-opacity));
 }
 
-.btn-outline-light:hover {
+.btn-outline-light{
+  --tw-text-opacity: 1;
+  color: rgb(17 17 17 / var(--tw-text-opacity));
+}
+
+:is(.dark .btn-outline-light){
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.btn-outline-light{
+  display: inline-block;
+  border-radius: 9999px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-weight: 700;
+  line-height: 1rem;
+  transition-duration: 0s;
+  -webkit-user-select: none;
+  /* Safari */
+  /* Firefox */
+  /* IE10+/Edge */
+  user-select: none;
+  /* Standard */
+}
+
+.btn-outline-light:hover{
+  text-decoration-line: none;
+}
+
+.btn-outline-light span{
+  transition-duration: 0s;
+}
+
+.btn-outline-light:hover span{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  transition-duration: 0s;
+}
+
+.btn-outline-light:hover .ic-md,
+.btn-outline-light:hover .ic{
+  --tw-invert: invert(100%);
+  -webkit-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+          filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.btn-outline-light:hover{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow-color: rgb(213 58 157 / 0.5);
+  --tw-shadow: var(--tw-shadow-colored);
   background: linear-gradient(to right, #d53a9d, #743ad5);
-  color: var(--black);
 }
 
 .btn-outline-light:focus {
@@ -831,21 +945,21 @@ a:hover {
 
 /* Theme Toggler */
 
-.th-toggle {
+.th-toggle{
   display: grid;
   width: 100%;
   place-content: end;
 }
 
-.darkmode-toggle {
+.darkmode-toggle{
   background-color: rgb(0 0 0 / 0.1);
 }
 
-:is(.dark .darkmode-toggle) {
+:is(.dark .darkmode-toggle){
   background-color: rgb(255 255 255 / 0.1);
 }
 
-.darkmode-toggle {
+.darkmode-toggle{
   position: relative;
   display: inline-block;
   height: 1.75rem;
@@ -859,7 +973,7 @@ a:hover {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.darkmode-toggle button {
+.darkmode-toggle button{
   --tw-bg-opacity: 1;
   background-color: rgb(148 163 184 / var(--tw-bg-opacity));
   position: absolute;
@@ -870,32 +984,34 @@ a:hover {
   border-radius: 9999px;
   border-style: none;
   padding: 0px;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  padding-left: 0.175rem;
+  transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+  transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
-.darkmode-toggle button .fa-moon,
-.darkmode-toggle .enabled .fa-sun {
+.darkmode-toggle button .ic-moon,
+.darkmode-toggle .enabled .ic-sun {
   display: none;
 }
 
-.darkmode-toggle button .fa-sun,
-.darkmode-toggle .enabled .fa-moon {
+.darkmode-toggle button .ic-sun,
+.darkmode-toggle .enabled .ic-moon {
   display: block;
 }
 
-.darkmode-toggle .enabled {
+.darkmode-toggle .enabled{
   --tw-bg-opacity: 1;
   background-color: rgb(213 58 157 / var(--tw-bg-opacity));
   left: 1.5rem;
 }
 
-.darkmode-toggle:hover button {
+.darkmode-toggle:hover button{
   --tw-bg-opacity: 0.5;
 }
 
-.darkmode-toggle:hover .enabled {
+.darkmode-toggle:hover .enabled{
   --tw-bg-opacity: 1;
   background-color: rgb(228 80 182 / var(--tw-bg-opacity));
 }
@@ -910,19 +1026,15 @@ a:hover {
   width: 100%;
 }
 
-.navbar-background {
+.navbar-background{
   border-color: rgb(0 0 0 / 0.1);
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-:is(.dark .navbar-background) {
+:is(.dark .navbar-background){
   border-color: rgb(255 255 255 / 0.1);
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 17 17 / var(--tw-bg-opacity));
 }
 
-.navbar-background {
+.navbar-background{
   border-bottom-width: 1px;
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -931,50 +1043,59 @@ a:hover {
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
-.nav-link {
+.nav-link{
   --tw-text-opacity: 1;
   color: rgb(67 67 67 / var(--tw-text-opacity));
 }
 
-.nav-link:hover {
+.nav-link:hover{
   --tw-bg-opacity: 1;
-  background-color: rgb(200 200 200 / var(--tw-bg-opacity));
+  background-color: rgb(227 227 227 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-:is(.dark .nav-link) {
+:is(.dark .nav-link){
   --tw-text-opacity: 1;
   color: rgb(164 164 164 / var(--tw-text-opacity));
 }
 
-:is(.dark .nav-link:hover) {
+:is(.dark .nav-link:hover){
   --tw-bg-opacity: 1;
   background-color: rgb(49 49 49 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.nav-link {
-  margin-right: 0.5rem;
+.nav-link{
+  margin-right: 1rem;
   border-radius: 0.25rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  font-size: .9rem;
+  font-weight: 500;
+  letter-spacing: -0.025em;
   text-decoration-line: none;
 }
 
-.nav-link:hover {
+.nav-link:hover{
   text-decoration-line: none;
 }
 
-:is(.dark .dark\:text-slate-300) {
-  --tw-text-opacity: 1;
-  color: rgb(203 213 225 / var(--tw-text-opacity));
+:is(.dark .dark\:bg-gray-950){
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 17 17 / var(--tw-bg-opacity));
 }
 
-:is(.dark .dark\:text-gray-300) {
+:is(.dark .dark\:text-gray-300){
   --tw-text-opacity: 1;
   color: rgb(164 164 164 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:invert){
+  --tw-invert: invert(100%);
+  -webkit-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+          filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
