--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -610,6 +610,10 @@ video {
   }
 }
 
+.z-40{
+  z-index: 40;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -690,6 +694,10 @@ video {
   flex: none;
 }
 
+.place-items-center{
+  place-items: center;
+}
+
 .items-center{
   align-items: center;
 }
@@ -708,21 +716,43 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-white\/50{
+  background-color: rgb(255 255 255 / 0.5);
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
 
-.pb-2{
-  padding-bottom: 0.5rem;
+.pb-3{
+  padding-bottom: 0.75rem;
 }
 
 .pt-3{
   padding-top: 0.75rem;
 }
 
+.pt-3\.5{
+  padding-top: 0.875rem;
+}
+
+.text-center{
+  text-align: center;
+}
+
 .align-middle{
   vertical-align: middle;
+}
+
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-gray-300{
@@ -739,6 +769,12 @@ video {
   --tw-invert: invert(100%);
   -webkit-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
           filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.backdrop-blur-sm{
+  --tw-backdrop-blur: blur(4px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 html {
@@ -932,6 +968,130 @@ h3{
 }
 
 /*
+******* logo
+*/
+
+.logo-svg{
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.logo-svg:hover{
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.logo-svg:hover path:nth-child(1) {
+  -webkit-animation: anim-logo1 2s cubic-bezier(0.71, 0.13, 0.9, 0.07) infinite;
+          animation: anim-logo1 2s cubic-bezier(0.71, 0.13, 0.9, 0.07) infinite;
+}
+
+.logo-svg:hover path:nth-child(2) {
+  -webkit-animation: anim-logo2 2s cubic-bezier(0.71, 0.13, 0.9, 0.07) infinite;
+          animation: anim-logo2 2s cubic-bezier(0.71, 0.13, 0.9, 0.07) infinite;
+}
+
+.logo-svg:hover path:nth-child(3) {
+  -webkit-animation: anim-logo3 2s cubic-bezier(0.71, 0.13, 0.9, 0.07) infinite;
+          animation: anim-logo3 2s cubic-bezier(0.71, 0.13, 0.9, 0.07) infinite;
+}
+
+@-webkit-keyframes anim-logo1 {
+  0%,
+	100% {
+    fill: #3ab6d5;
+  }
+
+  33% {
+    fill: #d53a9d;
+  }
+
+  66% {
+    fill: #743ad5;
+  }
+}
+
+@keyframes anim-logo1 {
+  0%,
+	100% {
+    fill: #3ab6d5;
+  }
+
+  33% {
+    fill: #d53a9d;
+  }
+
+  66% {
+    fill: #743ad5;
+  }
+}
+
+@-webkit-keyframes anim-logo2 {
+  0%,
+	100% {
+    fill: #743ad5;
+  }
+
+  33% {
+    fill: #3ab6d5;
+  }
+
+  66% {
+    fill: #d53a9d;
+  }
+}
+
+@keyframes anim-logo2 {
+  0%,
+	100% {
+    fill: #743ad5;
+  }
+
+  33% {
+    fill: #3ab6d5;
+  }
+
+  66% {
+    fill: #d53a9d;
+  }
+}
+
+@-webkit-keyframes anim-logo3 {
+  0%,
+	100% {
+    fill: #d53a9d;
+  }
+
+  33% {
+    fill: #743ad5;
+  }
+
+  66% {
+    fill: #3ab6d5;
+  }
+}
+
+@keyframes anim-logo3 {
+  0%,
+	100% {
+    fill: #d53a9d;
+  }
+
+  33% {
+    fill: #743ad5;
+  }
+
+  66% {
+    fill: #3ab6d5;
+  }
+}
+
+/*
 ******* Squiggly Line
 */
 
@@ -973,9 +1133,15 @@ h3{
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.dark .darkmode-toggle {
+  background: linear-gradient(
+		to left,
+		rgba(116, 58, 213, 0.6),
+		rgba(58, 182, 213, 0.3)
+	);
+}
+
 .darkmode-toggle button{
-  --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
   position: absolute;
   top: 0.2rem;
   left: 0.175rem;
@@ -989,6 +1155,7 @@ h3{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 300ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  background: linear-gradient(45deg, #3ab6d5, #743ad5);
 }
 
 .darkmode-toggle button .ic-moon,
@@ -1001,9 +1168,8 @@ h3{
   display: block;
 }
 
-.darkmode-toggle .enabled{
-  --tw-bg-opacity: 1;
-  background-color: rgb(213 58 157 / var(--tw-bg-opacity));
+.darkmode-toggle .enabled {
+  background: #d53a9d;
   left: 1.5rem;
 }
 
@@ -1019,7 +1185,7 @@ h3{
 /* Navbar */
 
 .navbar-section {
-  border-top: 0.2rem solid;
+  border-top: 0.25rem solid;
   border-image-slice: 1;
   border-image-source: linear-gradient(to right, #d53a9d, #743ad5, #3ab6d5);
   position: fixed;
@@ -1074,7 +1240,7 @@ h3{
   padding-bottom: 0.375rem;
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-  font-size: .9rem;
+  font-size: 0.95rem;
   font-weight: 500;
   letter-spacing: -0.025em;
   text-decoration-line: none;
@@ -1084,9 +1250,47 @@ h3{
   text-decoration-line: none;
 }
 
+.nav-link[aria-current="true"]{
+  font-weight: 700;
+}
+
+.nav-link[aria-current="true"]:nth-child(1){
+  --tw-text-opacity: 1;
+  color: rgb(182 32 123 / var(--tw-text-opacity));
+}
+
+:is(.dark .nav-link[aria-current="true"]:nth-child(1)){
+  --tw-text-opacity: 1;
+  color: rgb(245 172 226 / var(--tw-text-opacity));
+}
+
+.nav-link[aria-current="true"]:nth-child(2){
+  --tw-text-opacity: 1;
+  color: rgb(116 58 213 / var(--tw-text-opacity));
+}
+
+:is(.dark .nav-link[aria-current="true"]:nth-child(2)){
+  --tw-text-opacity: 1;
+  color: rgb(167 143 246 / var(--tw-text-opacity));
+}
+
+.nav-link[aria-current="true"]:nth-child(3){
+  --tw-text-opacity: 1;
+  color: rgb(29 123 157 / var(--tw-text-opacity));
+}
+
+:is(.dark .nav-link[aria-current="true"]:nth-child(3)){
+  --tw-text-opacity: 1;
+  color: rgb(176 231 241 / var(--tw-text-opacity));
+}
+
 :is(.dark .dark\:bg-gray-950){
   --tw-bg-opacity: 1;
   background-color: rgb(17 17 17 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-gray-950\/70){
+  background-color: rgb(17 17 17 / 0.7);
 }
 
 :is(.dark .dark\:text-gray-300){
