--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700;900&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&family=Merriweather:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,9 +8,8 @@ html {
 }
 
 body {
-	@apply bg-white text-gray-950;
+	@apply bg-white text-gray-950 font-mono;
 	margin: 0;
-	font-family: "Roboto Mono", "Consolas", "Segoe UI", sans-serif;
 	font-size: 16px;
 	font-display: block;
 }
@@ -25,15 +24,7 @@ body * {
 
 * {
 	@apply text-gray-800 dark:text-gray-100;
-}
-
-.font-mono {
-	font-family: "Roboto Mono", "Consolas", "Courier New", monospace;
 	font-display: block;
-}
-
-.font-sans {
-	font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
 a {
@@ -234,7 +225,7 @@ h5 {
 	border-top: 0.25rem solid;
 	border-image-slice: 1;
 	border-image-source: linear-gradient(to right, #e39600, #d53a9d, #743ad5, #3ab6d5);
-	@apply fixed w-full z-40;
+	@apply w-full z-40;
 }
 .navbar-background {
 	@apply border-black/10 bg-white/70;
