--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,6 +79,11 @@ h5 {
 	@apply text-xl font-bold leading-[2rem] tracking-tight;
 }
 
+.text-stroke {
+	-webkit-text-stroke: 1.5px rgba(100, 100, 100, 0.2);
+	user-select: none;
+}
+
 /* Buttons */
 .btn-outline-light {
 	@apply bg-gray-200/60 dark:bg-gray-900;
@@ -268,4 +273,9 @@ h5 {
 .footer-section::before {
 	content: "";
 	@apply h-24 w-full absolute top-0 bg-gradient-to-b from-white to-transparent dark:from-gray-950 dark:to-transparent;
+}
+
+/* Projects Section */
+.text-project-description p {
+	@apply my-6;
 }
